bpk-lib/crates/macbat/macros/tests/trybuild_negative/projection_on_tuple_struct.stderr
error: expected a named-field struct
 --> tests/trybuild_negative/projection_on_tuple_struct.rs:5:8
  |
5 | struct P(u8);
  |        ^
