bpk-lib/crates/macbat/macros/tests/trybuild_negative/projection_on_tuple_struct.rs
use macbat::Projection;
#[derive(Projection)]
#[batpak(input = JsonValueInput)]
#[batpak(event = Ev, handler = on_ev)]
struct P(u8);
fn main() {}
